--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,60 +1,56 @@
 
 <h1>MONGODB - EXERCISE</h1>
 <section class="insert">
-    <h3>Insert Data</h3>
-    <form action="/insert" method="post">
+    <h3>Insert Doctor</h3>
+    <form action="/insertDoctor" method="post">
         <div class="input">
-            <label for="doctor">Title</label>
-            <input type="text" id="title" name="title">
+            <label for="name">Doctor</label>
+            <input type="text" id="name" name="name">
         </div>
         <div class="input">
-            <label for="content">Content</label>
-            <input type="text" id="content" name="content">
-        </div>
-        <div class="input">
-            <label for="author">Author</label>
-            <input type="text" id="author" name="author">
+            <label for="speciality">Speciaity</label>
+            <input type="text" id="speciality" name="speciality">
         </div>
         <button type="submit">INSERT</button>
     </form>
 </section>
+
 <section class="get">
-    <h3>Get Data</h3>
-    <a href="/get-data">LOAD DATA</a>
+    <h3>Get Doctors</h3>
+    <a href="/get-doctors">LOAD DATA</a>
     <div>
-        {{# each items }}
+        {{# each doctors }}
             <article class="item">
-                <div>Title: {{ this.title }}</div>
-                <div>Content: {{ this.content }}</div>
-                <div>Author: {{ this.author }}</div>
+                <div>Name: {{ this.name}}</div>
+                <div>Speciality: {{ this.speciality }}</div>
                 <div>ID: {{ this._id }}</div>
             </article>
+            <br>
         {{/each}}
     </div>
 </section>
+
 <section class="update">
     <h3>Update Data</h3>
-    <form action="/update" method="post">
+    <form action="/updateDoctor" method="post">
         <div class="input">
             <label for="id">ID</label>
             <input type="text" id="id" name="id">
         </div>
         <div class="input">
-            <label for="title">Title</label>
-            <input type="text" id="title" name="title">
+            <label for="name">Doctor</label>
+            <input type="text" id="name" name="name">
         </div>
         <div class="input">
-            <label for="content">Content</label>
-            <input type="text" id="content" name="content">
-        </div>
-        <div class="input">
-            <label for="author">Author</label>
-            <input type="text" id="author" name="author">
+            <label for="speciality">Speciaity</label>
+            <input type="text" id="speciality" name="speciality">
         </div>
         <button type="submit">UPDATE</button>
     </form>
 </section>
 </section>
+
+
 <section class="delete">
     <h3>Delete Data</h3>
     <form action="/delete" method="post">
